src/test/rustdoc-ui/invalid-html-tags.stderr
error: unclosed HTML tag `unknown`
  --> $DIR/invalid-html-tags.rs:7:5
   |
LL | /// <unknown>
   |     ^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/invalid-html-tags.rs:1:9
   |
LL | #![deny(invalid_html_tags)]
   |         ^^^^^^^^^^^^^^^^^

error: unclosed HTML tag `script`
  --> $DIR/invalid-html-tags.rs:10:5
   |
LL | /// <script>
   |     ^^^^^^^

error: unclosed HTML tag `h2`
  --> $DIR/invalid-html-tags.rs:15:7
   |
LL | ///   <h2>
   |       ^^^

error: unclosed HTML tag `h3`
  --> $DIR/invalid-html-tags.rs:17:9
   |
LL | ///     <h3>
   |         ^^^

error: unopened HTML tag `hello`
  --> $DIR/invalid-html-tags.rs:20:5
   |
LL | /// </hello>
   |     ^^^^^^^

error: aborting due to 5 previous errors

